retrieve both public and private repos